# hf-pkg

./: .gitignore  Dockerfile  README.md  hf-pkg  pyproject.toml
.github/workflows/: docker-publish.yml
